# fx_payment_processor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 56f2e20aacc7_initial_migration.py
scripts/: seed_db.py
src/: config.py  main.py
src/api/: dependencies.py
src/api/routes/: __init__.py  wallet.py
src/config/: config.py  logging_config.py
src/database/: __init__.py  engine.py  seeders.py
src/models/: __init__.py  currency.py  transaction.py  user.py  wallet.py
src/repositories/: __init__.py  transaction_repository.py  user_repository.py  wallet_repository.py
src/schemas/: __init__.py  wallet.py
src/services/: __init__.py  fx_rates.py  wallet_service.py
tests/: conftest.py
tests/api/: test_wallet_routes.py
tests/e2e/: test_wallet_flow.py
tests/models/: test_user.py
tests/repositories/: test_transaction_repository.py  test_user_repository.py  test_wallet_repository.py
tests/services/: test_wallet_service.py  test_wallet_service_edge_cases.py
